@@ -1,4 +1,4 @@
 #pragma once
-#include <iostream>
+
 
 enum actorTypes{ HERO, DRAGON, TROLL, SKELETON, GHOST };
