@@ -1,0 +1,14 @@
+#pragma once
+#include <array>
+#include <string>
+
+using namespace std;
+
+namespace itemtype {
+	
+
+	static array<string, 6> type{ "Sword","Armor","Boots","Ring","Shield","Gloves" };
+	static array<string, 3> goodPrefix{ "Good","Magic","Legendary" };
+	static array<string, 3> badPrefix{ "Bad","Broken","Cursed" };
+
+}
