@@ -1,3 +1,13 @@
+Pre-Alpha [v0.0.0.7.12-06-18]
+	- added Exit from dungeon
+        - displaying as 'E'
+    - implemented class Backpack
+        - method addItem to Backpack
+        - method removeItem from Backpack
+        - method compareItem in Backpack
+    - implemented class Item
+        - randomization of type and prefix
+-----------------------------------------------------------------
 Pre-Alpha [v0.0.0.6.11-06-18]
 	- added randomization of size map
     - added randomization of opennig Room()
@@ -6,7 +16,7 @@ Pre-Alpha [v0.0.0.6.11-06-18]
 -----------------------------------------------------------------
 Pre-Alpha [v0.0.0.5.10-06-18]
 	- added naming mechanism of game Hero by user
-      with handling exceptions
+        with handling exceptions
 -----------------------------------------------------------------
 Pre-Alpha [v0.0.0.4.26-05-18]
 	- added serializations of Hero object
